; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libedit/extr_el.c_el_resize.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libedit/extr_el.c_el_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGWINCH = common dso_local global i32 0, align 4
@SIG_BLOCK = common dso_local global i32 0, align 4
@SIG_SETMASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @el_resize(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = call i32 @sigemptyset(i32* %6)
  %8 = load i32, i32* @SIGWINCH, align 4
  %9 = call i32 @sigaddset(i32* %6, i32 %8)
  %10 = load i32, i32* @SIG_BLOCK, align 4
  %11 = call i32 @sigprocmask(i32 %10, i32* %6, i32* %5)
  %12 = load i32*, i32** %2, align 8
  %13 = call i64 @terminal_get_size(i32* %12, i32* %3, i32* %4)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %1
  %16 = load i32*, i32** %2, align 8
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @terminal_change_size(i32* %16, i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %15, %1
  %21 = load i32, i32* @SIG_SETMASK, align 4
  %22 = call i32 @sigprocmask(i32 %21, i32* %5, i32* null)
  ret void
}

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaddset(i32*, i32) #1

declare dso_local i32 @sigprocmask(i32, i32*, i32*) #1

declare dso_local i64 @terminal_get_size(i32*, i32*, i32*) #1

declare dso_local i32 @terminal_change_size(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
